# duckagent

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md
examples/: duckagent_magic.ipynb  langgraph_example.py  langgraph_supervisor_demo.py  langsmith_supervisor_full_demo.py  openai_summarize.py  run_with_dataframe.py  run_with_dataframe_with_conn.py  send_to_langsmith.py  streamlit_demo.py
scripts/: run_tests.sh
src/duckagent/: __init__.py  agent.py  duckdb_extensions.py  ipython_magic.py  llm_adapter.py  orchestrator.py  planner.py  router.py
src/duckagent.egg-info/: SOURCES.txt  top_level.txt
src/duckagent/adapters/: langgraph_adapter.py  langgraph_mapping.py
tests/: run_magic_sanity.py  test_agent_langgraph.py  test_data_handling.py  test_integration_example.py  test_langgraph_adapter.py  test_langgraph_mapping.py  test_langgraph_materializer.py  test_langsmith_integration.py  test_planner_llm.py  test_router.py
